--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
+    "jest": "^29.5.0",
     "prettier": "^2.8.8"
   }
 }
