--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/repl.js",
     "test": "jest"
   },
   "repository": {
@@ -21,5 +22,9 @@
     "eslint-config-prettier": "^8.8.0",
     "jest": "^29.5.0",
     "prettier": "^2.8.8"
+  },
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "inquirer": "^6.3.1"
   }
 }
